# app/Http/Requests/CreateReadedMessageRequest.php
@@ -1,0 +1,101 @@
+<?php
+/**
+ * Created by PhpStorm.
+ * User: kirya
+ * Date: 13.09.16
+ * Time: 16:24
+ */
+
+namespace App\Http\Requests;
+
+
+use App\Message;
+use App\Repository\MessageRepository;
+use App\Services\MessageService;
+use Carbon\Carbon;
+use Swagger\Annotations as SWG;
+use Symfony\Component\HttpKernel\Exception\NotFoundHttpException;
+
+/**
+ *
+ * @SWG\Definition(
+ *      definition="CreateReadedMessageRequest",
+ *      @SWG\Property(
+ *         property="readed",
+ *         description="readed datetime",
+ *         type="string",
+ *      ),
+ *  )
+ *
+ * Class CreateeResponseRequest
+ * @package App\Http\Requests
+ */
+class CreateReadedMessageRequest extends ApiRequest
+{
+    /**
+     * @var Message
+     */
+    private $item;
+
+    /**
+     * @var MessageService
+     */
+    private $messageService;
+
+    public function __construct(array $query = array(), array $request = array(), array $attributes = array(), array $cookies = array(), array $files = array(), array $server = array(), $content = null)
+    {
+        $this->messageService = new MessageService(new MessageRepository());
+        parent::__construct($query, $request, $attributes, $cookies, $files, $server, $content); // TODO: Change the autogenerated stub
+    }
+
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return $this->user()->can('readed', $this->getMessage());
+    }
+
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return ['readed' => 'date|required'];
+    }
+
+    /**
+     * @return Carbon
+     */
+    public function getReaded()
+    {
+        if ($this->get('readed') === null) {
+            return null;
+        }
+        return Carbon::parse($this->get('readed'));
+    }
+
+
+    /**
+     * @return Message
+     */
+    public function getMessage()
+    {
+        if (!isset($this->item)) {
+            $this->item = $this->messageService->findItem((int)$this->route('id'));
+            if (!isset($this->item)) {
+                throw new NotFoundHttpException('Not found item');
+            }
+        }
+        return $this->item;
+    }
+
+
+
+}
+
