# app/Http/Requests/CreateReadedResponseRequest.php
@@ -1,0 +1,102 @@
+<?php
+/**
+ * Created by PhpStorm.
+ * User: kirya
+ * Date: 13.09.16
+ * Time: 16:24
+ */
+
+namespace App\Http\Requests;
+
+
+use App\Http\Requests\ApiRequest;
+use App\Demand\Response;
+use App\Services\ResponseService;
+use App\Type\ResponseStatus;
+use Carbon\Carbon;
+use Swagger\Annotations as SWG;
+use Symfony\Component\HttpKernel\Exception\NotFoundHttpException;
+
+/**
+ *
+ * @SWG\Definition(
+ *      definition="CreateReadedResponseRequest",
+ *      @SWG\Property(
+ *         property="readed",
+ *         description="readed datetime",
+ *         type="string",
+ *      ),
+ *  )
+ *
+ * Class CreateResponseRequest
+ * @package App\Http\Requests
+ */
+class CreateReadedResponseRequest extends ApiRequest
+{
+    /**
+     * @var Response
+     */
+    private $item;
+
+    /**
+     * @var ResponseService
+     */
+    private $responseService;
+
+    public function __construct(array $query = array(), array $request = array(), array $attributes = array(), array $cookies = array(), array $files = array(), array $server = array(), $content = null)
+    {
+        $this->responseService = new ResponseService();
+        parent::__construct($query, $request, $attributes, $cookies, $files, $server, $content); // TODO: Change the autogenerated stub
+    }
+
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return $this->user()->can('update', $this->getResponse());
+    }
+
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return ['readed' => 'date|required'];
+    }
+
+    /**
+     * @return Carbon
+     */
+    public function getReaded()
+    {
+        if ($this->get('readed') === null) {
+            return null;
+        }
+        return Carbon::parse($this->get('readed'));
+    }
+
+
+    /**
+     * @return Response
+     */
+    public function getResponse()
+    {
+        if (!isset($this->item)) {
+            $this->item = $this->responseService->findItem((int)$this->route('id'));
+            if (!isset($this->item)) {
+                throw new NotFoundHttpException('Not found item');
+            }
+        }
+        return $this->item;
+    }
+
+
+
+}
+
